--- a/g4mes.html
+++ b/g4mes.html
@@ -61,7 +61,7 @@ button:hover {
     transition: transform 0.2s ease, background 0.2s ease;
     border-radius: 10px;
 ">
-    Fnaf 1
+    Wrestle Bros
 </button>
 
 <script>
@@ -70,7 +70,7 @@ function openProxy() {
     win.document.write(`
         <html>
             <head>
-                <title>Wrestle Bros</title>
+                <title>Learn coding, And more with google.</title>
             </head>
             <body style="margin:0; overflow:hidden;">
                 <iframe src="https://wrestlebros.io" style="width:100vw; height:100vh; border:none;"></iframe>
