--- a/g4mes.html
+++ b/g4mes.html
@@ -133,7 +133,7 @@ button:hover {
     transition: transform 0.2s ease, background 0.2s ease;
     border-radius: 10px;
 ">
-    Kart Bros
+    Wrestle Bros
 </button>
 
 <script>
@@ -145,7 +145,7 @@ function openProxy() {
                 <title>Learn Coding, and more with Google.</title>
             </head>
             <body style="margin:0; overflow:hidden;">
-                <iframe src="https://db.login-live.blogbott.com/html/kart_bros/index.html" style="width:100vw; height:100vh; border:none;"></iframe>
+                <iframe src="https://wrestlebros.io" style="width:100vw; height:100vh; border:none;"></iframe>
             </body>
         </html>
     `);
