--- a/g4mes.html
+++ b/g4mes.html
@@ -16,3 +16,38 @@
     <h1 style="font-size:40px;">🟩Games🟩</h1>
 
 
+<button onclick="openProxy()" style="
+    padding: 18px 40px;
+    background: transparent;
+    color: white;
+    border: 3px solid white;
+    font-size: 22px;
+    cursor: pointer;
+    transition: transform 0.2s ease, background 0.2s ease;
+    border-radius: 10px;
+">
+    Football Bros
+</button>
+
+<script>
+function openProxy() {
+    let win = window.open("about:blank", "_blank");
+    win.document.write(`
+        <html>
+            <head>
+                <title>PROXLABELTITLE</title>
+            </head>
+            <body style="margin:0; overflow:hidden;">
+                <iframe src=https://footballbros.io" style="width:100vw; height:100vh; border:none;"></iframe>
+            </body>
+        </html>
+    `);
+}
+</script>
+
+<style>
+button:hover {
+    transform: scale(1.12);
+    background: rgba(255,255,255,0.15);
+}
+</style>
